# claudius

./: ARCHITECTURE.md  CLAUDE.md  COMMITTING.md  Cargo.toml  HITL.md  README.md  TODO.md  TYPES.md  base.yaml
.github/workflows/: rust.yml
derive/: Cargo.toml
derive/src/: lib.rs
examples/: agent-as-tool.rs  agent-streaming.rs  agent.rs  agentkb.rs  basic_chat.rs  chat-with-docs.rs  chat-with-tools.rs  models_example.rs  raw_streaming.rs  retry_example.rs  streaming-tool-use.rs  streaming.rs
prompts/: README.md  bar.yaml  basic_hello.txt  code_generation.yaml  creative_writing.yaml  edge_case_empty.yaml  error_case_invalid_model.yaml  foo.yaml  json_parsing.yaml  long_response.yaml  model_comparison.yaml  multi_turn_conversation.yaml  parent_system_test.yaml  refusal_test.yaml  simple_math.yaml  stop_sequence_test.yaml  structured_output_test.yaml  system.md  temperature_test.yaml  tool_calling_test.yaml
src/: accumulating_stream.rs  agent.rs  backoff.rs  cache_control.rs  client.rs  client_logger.rs  combinators.rs  error.rs  lib.rs  observability.rs  prompt.rs  render.rs  sse.rs
src/chat/: commands.rs  config.rs  mod.rs  render.rs  session.rs
src/types/: anthropic_beta.rs  base64_image_source.rs  base64_pdf_source.rs  cache_control_ephemeral.rs  citation_char_location.rs  citation_content_block_location.rs  citation_page_location.rs  citation_web_search_result_location.rs  citations_config.rs  citations_delta.rs  completion.rs  content.rs  content_block.rs  content_block_delta.rs  content_block_delta_event.rs  content_block_source_content_param.rs  content_block_source_param.rs  content_block_start_event.rs  content_block_stop_event.rs  document_block.rs  document_block_param.rs  image_block.rs  image_block_param.rs  input_json_delta.rs  message.rs  message_count_tokens_params.rs  message_count_tokens_tool_param.rs  message_create_params.rs  message_create_template.rs  message_delta_event.rs  message_delta_usage.rs  message_param.rs  message_start_event.rs  message_stop_event.rs  message_stream_event.rs  message_tokens_count.rs  metadata.rs  mod.rs  model.rs  model_info.rs  (+65 more)
src/types/messages/: batch_create_params.rs  batch_list_params.rs  mod.rs
src/types/shared/: api_error_object.rs  authentication_error.rs  billing_error.rs  error_object.rs  error_response.rs  gateway_timeout_error.rs  invalid_request_error.rs  mod.rs  not_found_error.rs  overloaded_error.rs  permission_error.rs  rate_limit_error.rs
src/utils/: mod.rs  time.rs
tests/: integration_tests.rs
