[package]
name = "claudius"
version = "0.18.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2024"
description = "SDK for the Anthropic API"
license = "Apache-2.0"
repository = "https://github.com/rescrv/claudius"

[features]
default = ["binaries", "native-tls"]

binaries = []

rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
base64 = "0.21.5"
url = "2.5.0"
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream"] }
bytes = "1.5"
futures = "0.3"
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1.88"
utf8path = "0.9.1"
serde_yaml = "0.9.34"
arrrg = "0.8.0"
arrrg_derive = "0.8.0"
getopts = "0.2.24"
rustyline = "17.0.2"
ctrlc = { version = "3.5.1", features = ["termination"] }
biometrics = "0.12.0"

[[bin]]
name = "median-text"
path = "src/bin/median-text.rs"
required-features=["binaries"]

[[bin]]
name = "claudius-prompt"
path = "src/bin/claudius-prompt.rs"
required-features=["binaries"]

[[bin]]
name = "claudius-chat"
path = "src/bin/claudius-chat.rs"
required-features=["binaries"]

[dev-dependencies]
tokio = { version = "1.36", features = ["full", "test-util", "macros"] }
tokio-test = "0.4"

[[example]]
name = "retry_example"
path = "examples/retry_example.rs"
