[package]
name = "claudius"
version = "0.19.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2024"
description = "SDK for the Anthropic API"
license = "Apache-2.0"
repository = "https://github.com/rescrv/claudius"

[features]
default = ["binaries"]

binaries = []

[dependencies]
async-trait = "0.1"
base64 = "0.22"
bytes = "1.11"
ctrlc = { version = "3.5", features = ["termination"] }
futures = "0.3"
getopts = "0.2"
reqwest = { version = "0.13", features = ["json", "query", "stream"] }
rustyline = "17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
tokio = { version = "^1.49", features = ["full"] }
tokio-util = { version = "^0.7", features = ["codec"] }
url = "2.5"

arrrg = "^0.8"
arrrg_derive = "^0.8"
biometrics = "^0.12"
utf8path = "^0.9"

[[bin]]
name = "median-text"
path = "src/bin/median-text.rs"
required-features=["binaries"]

[[bin]]
name = "claudius-prompt"
path = "src/bin/claudius-prompt.rs"
required-features=["binaries"]

[[bin]]
name = "claudius-chat"
path = "src/bin/claudius-chat.rs"
required-features=["binaries"]

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full", "test-util", "macros"] }
tokio-test = "0.4.5"

[[example]]
name = "retry_example"
path = "examples/retry_example.rs"
