[package]
name = "claudius-derive"
version = "0.2.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "claudius-derive derives JsonSchema"
license = "Apache-2.0"
repository = "https://github.com/rescrv/claudius"

[lib]
proc-macro = true

[dependencies]
derive_util = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
serde_json = "1.0"
